--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="./chatraSetup.js"></script>
+    <script src="./chatra.js"></script>
   </body>
 </html>
