--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,15 @@
     -->
     <title>Hinesh Amin</title>
   </head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131025269-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-131025269-1');
+  </script>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
